# PINNs

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/pinns/: __init__.py  differentiation.py  geometry.py  initial_conditions.py  training.py
