[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinns"
version = "0.1.1"
description = "Solve differntial equations using neural networks"
license = { text = "GNU General Public License v3.0 or later" }
authors = [
    {name = "Alexandros Mavromatis", email="alex38clues@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]
keywords = ["differential","equations","neural networks"]
dependencies = [
    "tensorflow >= 2.9.1",
    "silence-tensorflow >= 1.2.0"
]
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/alexandmi/PINN-Notebooks"
